# mavsdk_bridge

./: CMakeLists.txt  mav.parm  mav.tlog  mav.tlog.raw  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mavsdk_bridge/lib/mavsdk_bridge/: action_client  action_client_land  action_service  client_commands_land  client_commands_takeoff  try_land  try_move  try_takeoff
install/mavsdk_bridge/share/mavsdk_bridge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mavsdk_bridge/share/mavsdk_bridge/cmake/: mavsdk_bridgeConfig.cmake
log/: latest_build
src/: action_client.cpp  action_client_land.cpp  action_client_move.cpp  action_client_takeoff.cpp  action_service.cpp  client_commands.cpp  client_commands_land.cpp  client_commands_takeoff.cpp  json_cmd_client.cpp  precision_landing_transmitter.cpp  test_mission_mavsdk.cpp  try_land.cpp  try_move.cpp  try_takeoff.cpp
